# agenda-bot

./: .env.exemple  Cargo.toml
src/: calendar.rs  main.rs
