[package]
name = "agenda-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.3"
dotenv = "0.15.0"
icalendar = "0.15.7"
iso8601 = "0.6.1"
lazy_static = "1.4.0"
poise = "0.5.6"
regex = "1.9.5"
reqwest = "0.11.20"
tokio = { version = "1", features = ["full"] }
